# pictonet-data

./: README.md  pyproject.toml
collectors/: __init__.py  arasaac.py  base.py  openmoji.py  quickdraw.py
datasets/: generator.py  validator.py
metadata/: labels.json  mappings.json
processors/: normalizer.py  svg_cleaner.py
tests/: test_collectors.py
