[tool.poetry]
name = "pictonet-data"
version = "0.1.0"
description = "Data collection and processing for PictoNet"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
tqdm = "^4.66.1"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"